# veriflow-rs

./: .gitignore
client/: Cargo.toml
client/src/: cli.rs  config.rs  main.rs  transfer.rs
common/: Cargo.toml
common/src/: hashing.rs  lib.rs  protocol.rs
server/src/: lib.rs  main.rs  server.rs
server/src/test_files/: images.jfif
