[package]
name = "Veriflow"
version = "0.1.0"
edition = "2021"
description = "A high-performance, asynchronous file transfer CLI built with Rust, Tokio and SHA-256 integrity verification."

[dependencies]
clap = { version = "4.5.53", features = ["cargo", "derive"] }
common = { version = "0.1.0", path = "../common" }
indicatif = "0.18.3"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"
comfy-table = "7.2.2"
tempfile = "3.27.0"
