[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "1.0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.27.0"
